--- a/css/admin.css
+++ b/css/admin.css
@@ -43,3 +43,21 @@ path {
 h3 small{
 	font-weight: normal;
 }
+
+.chart {
+  background: #b0e0f8;
+  margin: 5px;
+}
+
+.chart rect {
+  stroke: white;
+  fill: steelblue;
+}
+
+.chart text.bar-num {
+  fill: white;
+}
+
+.chart text.name {
+  fill: #000;
+}
